# grpc

./: .gitignore  README.md  command.proto  command_pb2.py  feeds@.service  main.py  procstat@.service  pyproject.toml  requirements.txt  run.sh  server.py  setup.sh  systemd.py  utils.py
.github/workflows/: build-upload.yaml
src/: command.proto  command_pb2.py  command_pb2_grpc.py  main.py  models.py  pyproject.toml  redis_sub.py  requirements.txt  run.sh  server.py  utils.py  zeromq.py
src/grpc/: command.proto  pyproject.toml  run.sh  utils.py
src/procstat/: main.py  pyproject.toml  run.sh
src/routes/: processes.py
test/: command_pb2.py  main.py  run.sh
