[tool.poetry]
name = "grpc-server"
version = "0.6.0"
package-mode = false
description = ""
authors = ["SD Traders <torrino07@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
protobuf = "4.21.12"
grpcio-tools = "1.59.0"
grpcio = "1.59.0"

[[tool.poetry.source]]
name = "Artifacts"
priority = "primary"
url = "https://artifacts-160945804984.d.codeartifact.us-east-1.amazonaws.com/pypi/Artifacts/simple/"
