[project]
name = "grpc"
version = "0.6.8"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    { name = "SD Traders", email = "torrino07@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "protobuf>=4.21.6,<5.0",
    "grpcio-tools==1.59.0",
    "grpcio==1.59.0",
]
